Update to Java3

--- a/Project3_math_operators/index.html
+++ b/Project3_math_operators/index.html
@@ -5,5 +5,29 @@
     <head>
         <script src="JS/main.js"></script>
     </head>
+    <body>
+        <script>
+            function addition()
+            {
+                var Addition = 3 + 4;
+                document.getElementById("Math").innerHTML="3 + 4 = " + Addition;
+            }
+            function subtraction()
+            {
+                var Subtraction = 5 - 2;
+                document.getElementById("Math").innerHTML="5 - 2 = " + Subtraction;
+            }
+            function multiplication()
+            {
+                var Multiplication = 6 * 8;
+                document.getElementById("Math").innerHTML="6 x 8 = " + Multiplication;
+            }
+            function division()
+            {
+                var Division = 48 / 6;
+                document.getElementById("Math").innerHTML="48 / 6 = " + Division;
+            }
+        </script>
+    </body>
 
 </html> 
