--- a/Project7_keywords/index.html
+++ b/Project7_keywords/index.html
@@ -9,6 +9,6 @@
         <button onclick="myFunction()">Click here.</button>
         <p id="New_and_This"></p>
 
-        <p id="Nested_Function" onclick=""></p>
+        <p id="Nested_Function" onclick="myFunction()"></p>
     </body>
 </html>
