--- a/Project6_ternary__operators_constructors/index.html
+++ b/Project6_ternary__operators_constructors/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
     <head>
+        <!--Calls main.js-->
         <script src="JS/main.js"></script>
     </head>
+        <!--Paragraph-->
         <p>Riders must be at least 52 centimeters tall to ride.</p>
         <input id="Height" value="52" />
+        <!--Ride function-->
         <button onclick="Ride_Function()">Click here!</button>"
         <p id="Ride"></p>
 </html>
