--- a/Project7_scopt_time_function/index.html
+++ b/Project7_scopt_time_function/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <script src="JS/main.js"></script>
+        <script src="JS/main.js"></script> <!--Calls main.js-->
     </head>
     <body>
         <p id="Greeting" onclick="get_Date()">Click here</p>
@@ -10,12 +10,12 @@
         
         <p>Please enter a number</p>
 
-        <input type="number" id="userInput">
+        <input type="number" id="userInput"> <!--Input-->
 
-        <p id="resultMessage"></p>
+        <p id="resultMessage"></p> <!--The message after resceiving input-->
 
         <p id="Time_of_day"></p>
-        <button onclick="Time_function()">Click here to get the time.</button>
+        <button onclick="Time_function()">Click here to get the time.</button> <!-- The button -->
     </body>
 
 </html>
