--- a/Project7_keywords/index.html
+++ b/Project7_keywords/index.html
@@ -3,12 +3,12 @@
 <html>
     <head>
         <button onclick="myFunction()">Click here.</button>
-        <p id="Keywords_and_Constructors"></p>
+        <p id="Keywords_and_Constructors"></p> <!--Keywords and Constructors id put into a paragraph-->
     </head>
     <body>
-        <button onclick="myFunction()">Click here.</button>
-        <p id="New_and_This"></p>
+        <button onclick="myFunction()">Click here.</button> <!--Button that calls myFunction-->
+        <p id="New_and_This"></p> <!--Paragraph with the New and This id-->
 
-        <p id="Nested_Function" onclick="myFunction()"></p>
+        <p id="Nested_Function" onclick="myFunction()"></p> <!-- This calls the function with the id of Nested Function-->
     </body>
 </html>
