--- a/Project9_countdown_slideshow/index.html
+++ b/Project9_countdown_slideshow/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="main.js"></script>
+        <script src="JS/main.js"></script>
         <link rel="stylesheet" href="CSS\styles.css">
     </head>
     <body>
