--- a/Project10_loops_arrays/index.html
+++ b/Project10_loops_arrays/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="script.js"></script>
+    <script src="JS/main.js"></script>
 </head>
     <body>
         <h1>JavaScript Loop and Object Examples</h1>
