--- a/Todo/index.html
+++ b/Todo/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="css/todo.css">
+        <script src="js/main.js"></script>
     </head>
     <body>
         <input id="task"><button id="add">Add Item</button>
