--- a/jQuery/jquery.html
+++ b/jQuery/jquery.html
@@ -11,11 +11,11 @@
                         <div id='inner'>\
                             <h1>Basic jQuery</h1>\
                             <p id='1'>Paragraph 1</p>\
-                            <p id='1'>Paragraph 2</p>\
-                            <p id='1'>Paragraph 3</p>\
+                            <p id='2'>Paragraph 2</p>\
+                            <p id='3'>Paragraph 3</p>\
                         </div>\
                     </div>\
-                /body>"
+                </body>"
             );
             $("#2").css({"color":"red"});
             $("#3").click(function() {
